# zynqstuff

./: CMakeLists.txt
led/: CMakeLists.txt  asm_vectors.S  blinky_working.elf  boot.S  fsbl.elf  led_main.c  lscript.ld  makefile  program.c  program_fpga.sh  program_fpga.tcl  ps7_init.c  translation_table.S  vectors.c  vectors.h  xgpio_low_level_example.c  xgpio_low_level_example_1.elf  xil-crt0.S  xilinx_makefile  zybo_example.bit
